[add ] function search

--- a/src/assets/scss/partials/_generals.scss
+++ b/src/assets/scss/partials/_generals.scss
@@ -1,3 +1,4 @@
 body{
+  font-family: Arial, Helvetica, sans-serif;
   background-image: linear-gradient( rgba(162, 144, 236,.4),rgba(162, 144, 236,.6),rgba(162, 144, 236,.8),rgba(162, 144, 236,1))
 }
